Fix eslint OOM errors, 2nd attempt.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "allowImportExportEverywhere": true,
-    "project": "tsconfig.base.json"
+    "allowImportExportEverywhere": true
   },
   "overrides": [
     {
