Fix eslint OOM errors, 2nd attempt.

--- a/plugins/ag-charts-generate-chart-thumbnail/.eslintrc.json
+++ b/plugins/ag-charts-generate-chart-thumbnail/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "extends": ["../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
+  "parserOptions": {
+    "project": "plugins/ag-charts-generate-chart-thumbnail/tsconfig.lint.json"
+  },
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
