--- a/plugins/ag-charts-task-autogen/.eslintrc.json
+++ b/plugins/ag-charts-task-autogen/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "extends": ["../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
+  "parserOptions": {
+    "project": "plugins/ag-charts-task-autogen/tsconfig.lint.json"
+  },
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
