--- a/packages/ag-charts-community-examples/.eslintrc.json
+++ b/packages/ag-charts-community-examples/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "extends": ["../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
+  "parserOptions": {
+    "project": "packages/ag-charts-community-examples/tsconfig.lint.json"
+  },
   "rules": {
     "@nx/dependency-checks": 1
   },
