--- a/plugins/ag-charts-generate-example-files/.eslintrc.json
+++ b/plugins/ag-charts-generate-example-files/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": ["../../.eslintrc.json"],
+  "parserOptions": {
+    "project": "plugins/ag-charts-generate-example-files/tsconfig.lint.json"
+  },
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
