Fix eslint OOM errors, 2nd attempt.

--- a/packages/ag-charts-react/.eslintrc.json
+++ b/packages/ag-charts-react/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["../../.eslintrc.json", "plugin:sonarjs/recommended", "plugin:react-hooks/recommended"],
-  "ignorePatterns": ["!**/*"]
+  "ignorePatterns": ["!**/*"],
+  "parserOptions": {
+    "project": "packages/ag-charts-react/tsconfig.lint.json"
+  }
 }
