--- a/packages/ag-charts-website/public/changelog/releaseVersionNotes.json
+++ b/packages/ag-charts-website/public/changelog/releaseVersionNotes.json
@@ -1,5 +1,9 @@
 [
     {
+        "release version": "10.3.1",
+        "markdown": "/releases/10_3_1.md"
+    },
+    {
         "release version": "10.3.0",
         "markdown": "/releases/10_3_0.md"
     },
