--- a/packages/ag-charts-website/package.json
+++ b/packages/ag-charts-website/package.json
@@ -25,6 +25,7 @@
     "codesandbox": "2.2.3",
     "dotenv-expand": "10.0.0",
     "esprima": "4.0.1",
+    "flexsearch": "^0.7.43",
     "fs-extra": "11.2.0",
     "github-slugger": "2.0.0",
     "history": "^5.3.0",
