--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,7 +53,8 @@
         "@typescript-eslint/prefer-optional-chain": 1,
         "@typescript-eslint/prefer-readonly": 1,
         "@typescript-eslint/prefer-ts-expect-error": 1,
-        "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }]
+        "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
+        "@typescript-eslint/no-for-in-array": 2
       }
     },
     {
@@ -62,7 +63,8 @@
         "jest": true
       },
       "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "@typescript-eslint/no-for-in-array": 0
       }
     },
     {
