--- a/packages/ag-charts-website/.gitignore
+++ b/packages/ag-charts-website/.gitignore
@@ -3,3 +3,6 @@ playwright-report/
 
 # Generated gallery thumbnails. Should only need it on CI/deployment
 public/gallery/thumbnails
+
+# Algolia search output
+search-output/
