--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "editor.formatOnSaveMode": "file",
   "eslint.validate": ["json"],
   "prettier.ignorePath": ".prettierignore.local",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "jestrunner.jestCommand": "node --expose-gc 'node_modules/.bin/jest'"
 }
