--- a/packages/ag-charts-website/package.json
+++ b/packages/ag-charts-website/package.json
@@ -59,12 +59,13 @@
     "glob": "8.0.3",
     "dotenv": "10.0.0",
     "commander": "2.20.3",
+    "mime": "^4.0.4",
     "prettier": "^3.2.5",
     "puppeteer-core": "7.1.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
-    "@playwright/test": "^1.47.2",
+    "@playwright/test": "1.45.0",
     "algoliasearch": "4.20.0",
     "puppeteer-core": "7.1.0"
   }
