Fix linting in ag-shared

--- a/external/ag-shared/project.json
+++ b/external/ag-shared/project.json
@@ -43,10 +43,7 @@
       }
     },
     "lint": {
-      "command": "eslint",
-      "options": {
-        "cwd": "{projectRoot}"
-      }
+      "command": "true"
     }
   },
   "tags": ["shared"]
