--- a/external/ag-shared/project.json
+++ b/external/ag-shared/project.json
@@ -43,7 +43,10 @@
       }
     },
     "lint": {
-      "command": "true"
+      "command": "eslint",
+      "options": {
+        "cwd": "{projectRoot}"
+      }
     }
   },
   "tags": ["shared"]
