Fix nx dev:quick stdout

--- a/packages/all/project.json
+++ b/packages/all/project.json
@@ -90,15 +90,14 @@
     },
     "dev:quick": {
       "executor": "nx:run-commands",
-      "dependsOn": [],
+      "dependsOn": [
+        "ag-charts-website-gallery_simple-bar_main.ts:generate-thumbnail"
+      ],
       "inputs": [],
       "outputs": [],
       "options": {
-        "parallel": false,
-        "commands": [
-          "nx run ag-charts-website-gallery_simple-bar_main.ts:generate-thumbnail",
-          "node external/ag-shared/scripts/watch/watch.js charts & nx run ag-charts-website:dev"
-        ]
+        "parallel": true,
+        "commands": ["node external/ag-shared/scripts/watch/watch.js charts", "nx run ag-charts-website:dev"]
       },
       "configurations": {
         "windows": {
