--- a/plugins/ag-charts-generate-example-files/project.json
+++ b/plugins/ag-charts-generate-example-files/project.json
@@ -17,8 +17,13 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint"
+      "executor": "nx:noop",
+      "dependsOn": ["lint:eslint"],
+      "configurations": {
+        "fix": {}
+      }
     },
+    "lint:eslint": {},
     "test": {
       "executor": "@nx/jest:jest",
       "dependsOn": ["ag-charts-community:build"],
