--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,7 @@
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "defaultExcludes": [
       "buildOutputExcludes",
-      "!{projectRoot}/.eslintrc.*",
+      "!{projectRoot}/eslint*",
       "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
       "!{projectRoot}/**/test/**",
       "!{projectRoot}/**/__image_snapshots__/**",
@@ -182,7 +182,7 @@
     },
 
     "lint": {
-      "inputs": ["default", "buildOutputExcludes", "{workspaceRoot}/.eslintrc.*", "{workspaceRoot}/.eslintignore"],
+      "inputs": ["default", "buildOutputExcludes", "{workspaceRoot}/eslint*"],
       "outputs": [],
       "cache": true
     },
@@ -206,31 +206,7 @@
         "commands": ["npx madge --circular --extensions ts src/"]
       }
     },
-    "lint:eslint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "eslintConfig": "{projectRoot}/.eslintrc.js",
-        "cache": true,
-        "cacheLocation": "{workspaceRoot}/node_modules/.cache/.eslintcache"
-      },
-      "cache": true,
-      "inputs": [
-        "default",
-        "buildOutputExcludes",
-        "{workspaceRoot}/.eslintrc.*",
-        "{projectRoot}/.eslintrc.*",
-        "{workspaceRoot}/tsconfig.base.json",
-        "{projectRoot}/tsconfig.json",
-        "{projectRoot}/tsconfig.lint.*",
-        "{workspaceRoot}/tools/eslint-rules/**/*"
-      ],
-      "outputs": [],
-      "configurations": {
-        "fix": {
-          "fix": true
-        }
-      }
-    },
+    "lint:eslint": {},
     "test": {
       "inputs": ["default", "buildOutputExcludes", "^production", "{workspaceRoot}/jest.preset.js"],
       "outputs": [],
@@ -257,17 +233,6 @@
           "codeCoverage": true
         }
       }
-    },
-    "@nx/eslint:lint": {
-      "cache": true,
-      "inputs": [
-        "default",
-        "buildOutputExcludes",
-        "{workspaceRoot}/.eslintrc.*",
-        "{projectRoot}/.eslintrc.*",
-        "{workspaceRoot}/tools/eslint-rules/**/*"
-      ],
-      "outputs": []
     },
     "@nx/vite:test": {
       "cache": true,
