--- a/package.json
+++ b/package.json
@@ -26,22 +26,16 @@
     "@nicolo-ribaudo/semver-v6": "^6.3.3",
     "@nx/devkit": "18.3.4",
     "@swc/helpers": "0.5.3",
-    "tslib": "^2.3.0",
-    "typescript-eslint": "^7.0.2"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@babel/types": "7.12.7",
     "@carbon/icons-react": "^11.21.0",
     "@nanostores/persistent": "^0.9.0",
     "@nanostores/react": "^0.7.1",
-    "@nx/cypress": "18.3.4",
     "@nx/esbuild": "18.3.4",
-    "@nx/eslint": "18.3.4",
-    "@nx/eslint-plugin": "18.3.4",
     "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
-    "@nx/plugin": "18.3.4",
-    "@nx/react": "18.3.4",
     "@nx/vite": "18.3.4",
     "@nx/workspace": "18.3.4",
     "@swc-node/register": "1.8.0",
@@ -61,8 +55,6 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
     "@vitest/coverage-v8": "1.5.3",
     "@vitest/ui": "1.5.3",
     "algoliasearch": "^4.18.0",
@@ -76,12 +68,6 @@
     "dependency-cruiser": "^13.1.5",
     "esbuild": "^0.19.2",
     "esbuild-plugin-umd-wrapper": "^2.0.0",
-    "eslint": "9.13.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-check-file": "^2.7.0",
-    "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-diff": "^2.0.3",
-    "eslint-plugin-sonarjs": "0.24.0",
     "glob": "8.0.3",
     "globals": "^15.2.0",
     "html-minifier-terser": "^7.2.0",
@@ -96,7 +82,7 @@
     "jscodeshift": "^0.15.0",
     "jsdom": "~22.1.0",
     "junit-report-merger": "^6.0.2",
-    "madge": "6.0.0",
+    "madge": "8.0.0",
     "nanostores": "^0.9.3",
     "npm-run-all": "^4.1.5",
     "nx": "18.3.4",
