--- a/packages/ag-charts-react/project.json
+++ b/packages/ag-charts-react/project.json
@@ -6,16 +6,13 @@
   "tags": ["fw", "no-batching"],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "eslintConfig": "{projectRoot}/.eslintrc.json"
-      },
+      "executor": "nx:noop",
+      "dependsOn": ["lint:eslint"],
       "configurations": {
-        "fix": {
-          "fix": true
-        }
+        "fix": {}
       }
     },
+    "lint:eslint": {},
     "build": {
       "executor": "nx:noop",
       "dependsOn": ["build:package", "build:umd", "build:types"],
@@ -42,13 +39,6 @@
         "outputFileName": "ag-charts-react",
         "main": "{projectRoot}/dist/package/index.esm.mjs",
         "external": ["ag-charts-community", "react", "react-dom"]
-      }
-    },
-    "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-      "options": {
-        "jestConfig": "{projectRoot}/jest.config.ts"
       }
     },
     "pack": {
