--- a/packages/ag-charts-website/project.json
+++ b/packages/ag-charts-website/project.json
@@ -133,13 +133,13 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
+      "executor": "nx:noop",
+      "dependsOn": ["lint:eslint"],
       "configurations": {
-        "fix": {
-          "fix": true
-        }
+        "fix": {}
       }
     },
+    "lint:eslint": {},
     "generate-examples": {
       "executor": "nx:noop",
       "dependsOn": ["^generate-example"],
