--- a/plugins/ag-charts-generate-code-reference-files/project.json
+++ b/plugins/ag-charts-generate-code-reference-files/project.json
@@ -16,8 +16,13 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint"
+      "executor": "nx:noop",
+      "dependsOn": ["lint:eslint"],
+      "configurations": {
+        "fix": {}
+      }
     },
+    "lint:eslint": {},
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
