--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/types": "7.12.7",
     "@carbon/icons-react": "^11.21.0",
+    "@eslint/js": "^9.14.0",
     "@nanostores/persistent": "^0.9.0",
     "@nanostores/react": "^0.7.1",
     "@nx/esbuild": "18.3.4",
@@ -68,8 +69,11 @@
     "dependency-cruiser": "^13.1.5",
     "esbuild": "^0.19.2",
     "esbuild-plugin-umd-wrapper": "^2.0.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-check-file": "^2.8.0",
+    "eslint-plugin-sonarjs": "^2.0.4",
     "glob": "8.0.3",
-    "globals": "^15.2.0",
+    "globals": "^15.12.0",
     "html-minifier-terser": "^7.2.0",
     "jest": "^29.5.0",
     "jest-canvas-mock": "^2.4.0",
@@ -107,6 +111,7 @@
     "ts-node": "10.9.1",
     "tsx": "4.8.2",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.14.0",
     "vite": "5.0.10",
     "vite-tsconfig-paths": "~4.2.0",
     "vitest": "1.5.3",
