--- a/nx.json
+++ b/nx.json
@@ -210,12 +210,13 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "{projectRoot}",
-        "command": "npx eslint"
+        "command": "npx eslint --quiet"
       },
       "cache": true,
       "inputs": [
         "default",
         "buildOutputExcludes",
+        "{workspaceRoot}/eslint.*",
         "{projectRoot}/eslint.*",
         "{workspaceRoot}/tsconfig.base.json",
         "{projectRoot}/tsconfig.json",
