--- a/packages/ag-charts-types/tsconfig.watch.json
+++ b/packages/ag-charts-types/tsconfig.watch.json
@@ -1,8 +1,4 @@
 {
   "extends": "./tsconfig.lib.json",
-  "compilerOptions": {
-    "strict": true,
-    "noUnusedParameters": false,
-    "noUnusedLocals": false
-  }
+  "compilerOptions": {}
 }
