fix ag-charts-types tsconfig on watch mode

--- a/packages/ag-charts-types/tsconfig.types.watch.json
+++ b/packages/ag-charts-types/tsconfig.types.watch.json
@@ -1,8 +1,4 @@
 {
   "extends": "./tsconfig.types.json",
-  "compilerOptions": {
-    "strict": true,
-    "noUnusedParameters": false,
-    "noUnusedLocals": false
-  }
+  "compilerOptions": {}
 }
