AG-12204 - Enable ban-ts-comment eslint rule.

--- a/packages/ag-charts-enterprise/tsconfig.spec.json
+++ b/packages/ag-charts-enterprise/tsconfig.spec.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "types": ["jest", "node"],
-    "noEmit": true
+    "noEmit": true,
+    "resolveJsonModule": true
   },
   "include": [
     "jest.config.ts",
